# Mathema

backend/: start.sh
front/src/pages/chess/: api.ts  app.tsx  chess.css  chess.tsx  store.ts
micro/: .gitignore  docker-compose.yaml
micro/chess/chess/: app.py
micro/logs/: results.jsonl
micro/ocr/: Dockerfile  results.jsonl
micro/ocr/ocr/: load.py  ocr.py
micro/saver/: docker-compose.yaml
micro/saver/back/: pyproject.toml  start.sh
micro/saver/back/api/: server.py  worker.py
micro/saver/front/doc/: index.html  package-lock.json  package.json  vite.config.ts
micro/saver/front/doc/src/: App.css  App.tsx
