[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
rq = "^1.16.2"
namesgenerator = "^0.3"

[tool.poetry.scripts]
start = 'api.server:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
